typescript2/pkg-grammar-treesitter/grammar.js
    source_file: ($) => repeat($._declaration),

    _declaration: ($) =>
      choice(
        $.class_declaration,
        $.enum_declaration,
        $.interface_declaration,
        $.implements_for_declaration,
        $.function_declaration,
        $.client_declaration,
        $.generator_declaration,
        $.retry_policy_declaration,
        $.template_string_declaration,
        $.type_alias_declaration,
        $.test_declaration,
        $.testset_declaration,
        $.let_declaration,
        $.empty_statement,
      ),

    // ==========================================================================
    // Class
    // ==========================================================================

    class_declaration: ($) =>
      seq(
        'class',
        field('name', $.identifier),
        optional(field('type_parameters', $.generic_parameters)),
        field('body', $.class_body),
      ),

    class_body: ($) =>
      seq('{', repeat($._class_member), '}'),

    _class_member: ($) =>
      choice(
        $.field_declaration,
        $.function_declaration,
        $.implements_block,
        $.block_attribute,
        $.empty_statement,
      ),

    // `name string`, `name: string`, trailing `,`/`;`, attributes possibly on
    // following lines (the parser is newline-blind here; so are we).
    field_declaration: ($) =>
      prec.right(
        seq(
          field('name', $.identifier),
          optional(':'),
          field('type', $._type),
          repeat($.attribute),
          optional(choice(',', ';')),
        ),
      ),

    // ==========================================================================
    // Enum
    // ==========================================================================

    enum_declaration: ($) =>
      seq('enum', field('name', $.identifier), field('body', $.enum_body)),

    enum_body: ($) =>
      seq(
        '{',
        repeat(choice($.enum_variant, $.block_attribute, $.empty_statement)),
        '}',
      ),

    enum_variant: ($) =>
      prec.right(
        seq(
          field('name', $.identifier),
          repeat($.attribute),
          optional(choice(',', ';')),
        ),
      ),

    // ==========================================================================
    // Interface / implements
    // ==========================================================================

    interface_declaration: ($) =>
      seq(
        'interface',
        field('name', $.identifier),
        optional(field('type_parameters', $.generic_parameters)),
        optional($.requires_clause),
        field('body', $.interface_body),
      ),

    requires_clause: ($) => seq('requires', commaSep1($._type)),

    interface_body: ($) =>
      seq(
        '{',
        repeat(
          choice(
            $.field_declaration,
            $.function_declaration,
            $.associated_type_declaration,
            $.block_attribute,
            $.empty_statement,
          ),
        ),
        '}',
      ),

    // `type Item extends Bound = Default` in interfaces / implements blocks.
    associated_type_declaration: ($) =>
      prec.right(
        seq(
          'type',
          field('name', $.identifier),
          optional(seq('extends', field('bound', $._type))),
          optional(seq('=', field('value', $._type))),
          optional(choice(',', ';')),
        ),
      ),

    // `implements Iface<Args> { ... }` inside a class body. The lexer has
    // both `implements` and `implement` (tokens.rs), and the parser accepts
    // them interchangeably here and in `implements … for` (parser.rs
    // parse_implements_block / parse_implements_for).
    implements_block: ($) =>
      seq(
        choice('implements', 'implement'),
        field('interface', $._type),
        field('body', $.implements_body),
      ),

    // Top-level `implements<T> Iface<T> for Target<T> { ... }`.
    implements_for_declaration: ($) =>
      seq(
        choice('implements', 'implement'),
        optional(field('type_parameters', $.generic_parameters)),
        field('interface', $._type),
        'for',
        field('target', $._type),
        field('body', $.implements_body),
      ),

    implements_body: ($) =>
      seq(
        '{',
        repeat(
          choice(
            $.function_declaration,
            $.associated_type_declaration,
            $.field_link,
            $.empty_statement,
          ),
        ),
        '}',
      ),

    // `interface_field as class_field`
    field_link: ($) =>
      prec.right(
        seq(
          field('interface_field', $.identifier),
          'as',
          field('class_field', $.identifier),
          optional(choice(',', ';')),
        ),
      ),

    // ==========================================================================
    // Function
    // ==========================================================================

    // Also used for interface method signatures (no body) and class methods.
    function_declaration: ($) =>
      prec.right(
        seq(
          'function',
          field('name', $.identifier),
          optional(field('type_parameters', $.generic_parameters)),
          field('parameters', $.parameter_list),
          optional(seq('->', field('return_type', $._type))),
          optional($.throws_clause),
          optional(field('body', $.function_body)),
        ),
      ),

    parameter_list: ($) => seq('(', commaSep($.parameter), ')'),

    parameter: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('default', $._expression))),
      ),

    throws_clause: ($) => seq('throws', field('error', $._type)),

    // A function body is either an LLM body (client/prompt fields) or an
    // expression body (statements). Both can also mix with header comments.
    function_body: ($) =>
      seq(
        '{',
        repeat(choice($.client_field, $.prompt_field, $._statement)),
        '}',
      ),

    // `client GPT4` | `client: Brain,` | `client "openai/gpt-4o"`
    // | `client openai/gpt-4o-mini`
    client_field: ($) =>
      seq(
        'client',
        optional(':'),
        field('value', choice($.string, $.config_value_path)),
        optional(','),
      ),

    // `prompt #"..."#` | `prompt: #"..."#,`
    prompt_field: ($) =>
      seq(
        alias('prompt', $.property_identifier),
        optional(':'),
        field('value', $.raw_string),
        optional(','),
      ),

    // ==========================================================================
    // client / generator / retry_policy (config blocks)
    // ==========================================================================

    client_declaration: ($) =>
      seq(
        'client',
        optional($.client_type),
        field('name', $.identifier),
        field('body', $.config_block),
      ),

    client_type: ($) => seq('<', field('kind', $.identifier), '>'),

    generator_declaration: ($) =>
      seq('generator', field('name', $.identifier), field('body', $.config_block)),

    retry_policy_declaration: ($) =>
      seq('retry_policy', field('name', $.identifier), field('body', $.config_block)),

    config_block: ($) =>
      seq('{', repeat(choice($.config_entry, $.empty_statement)), '}'),

    // `provider openai` | `provider: anthropic,` | `"string key" "value"`
    // Dynamic precedence: inside test bodies a config entry like
    // `args { ... }` also parses as juxtaposed expression statements; the
    // config interpretation is the semantically correct one.
    config_entry: ($) =>
      prec.dynamic(
        2,
        prec.right(
          seq(
            field('key', choice($.identifier, $.string, alias('retry_policy', $.identifier))),
            optional(':'),
            field('value', $._config_value),
            optional(choice(',', ';')),
          ),
        ),
      ),

    _config_value: ($) =>
      choice(
        $.string,
        $.raw_string,
        $.number,
        $.boolean,
        $.null,
        $.config_block,
        $.config_array,
        $.config_value_path,
      ),

    config_array: ($) =>
      seq('[', repeat(seq($._config_value, optional(','))), ']'),

    // Unquoted config values: `openai`, `gpt-4o`, `env.OPENAI_API_KEY`,
    // `openai/gpt-4o-mini`. Slash segments are lexed immediately so that a
    // following `//` comment still wins by longest match.
    config_value_path: ($) =>
      prec.right(
        seq(
          $.identifier,
          repeat(
            choice(
              seq('.', $.identifier),
              seq('/', alias(token.immediate(/[a-zA-Z0-9_.-]+/), $.identifier)),
            ),
          ),
        ),
      ),

    // ==========================================================================
    // template_string
    // ==========================================================================

    template_string_declaration: ($) =>
      seq(
        'template_string',
        field('name', $.identifier),
        optional(field('parameters', $.parameter_list)),
        field('body', $.raw_string),
      ),

    // ==========================================================================
    // test / testset / type_builder
    // ==========================================================================

    test_declaration: ($) =>
      seq(
        'test',
        optional(field('name', $._test_name)),
        field('body', $.test_body),
      ),

    // Test/testset names: `"literal"`, `ident`, or a dynamic concatenation
    // like `"prefix" + baml.unstable.string(i)` (full expressions would be
    // ambiguous with the body block).
    _test_name: ($) =>
      choice(
        $.string,
        $.identifier,
        alias($.test_name_concat, $.binary_expression),
      ),

    test_body: ($) =>
      seq(
        '{',
        repeat(
          choice(
            $.type_builder_block,
            $.config_entry,
            $._statement,
          ),
        ),
        '}',
      ),

    testset_declaration: ($) =>
      seq(
        'testset',
        optional(field('name', $._test_name)),
        field('body', $.test_body),
      ),

    type_builder_block: ($) =>
      seq(
        'type_builder',
        '{',
        repeat(
          choice(
            $.class_declaration,
            $.enum_declaration,
            $.dynamic_type_declaration,
            $.type_alias_declaration,
          ),
        ),
        '}',
      ),

    // `dynamic class Resume { ... }` / `dynamic enum Job { ... }`
    dynamic_type_declaration: ($) =>
      seq('dynamic', choice($.class_declaration, $.enum_declaration)),

    // ==========================================================================
    // type alias
    // ==========================================================================

    type_alias_declaration: ($) =>
      prec.right(
        seq(
          'type',
          field('name', $.identifier),
          optional(field('type_parameters', $.generic_parameters)),
          '=',
          field('value', $._type),
          optional(';'),
        ),
      ),

    // ==========================================================================
    // Generic parameters (declaration site)
    // ==========================================================================

    generic_parameters: ($) => seq('<', commaSep1($.generic_parameter), '>'),

    generic_parameter: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq('extends', field('bound', seq($._type, repeat(seq('&', $._type)))))),
      ),

    // ==========================================================================
    // Attributes
    // ==========================================================================

    attribute: ($) =>
      seq(
        '@',
        field('name', $.attribute_name),
        optional(field('arguments', $.attribute_arguments)),
      ),

    block_attribute: ($) =>
      seq(
        '@@',
        field('name', $.attribute_name),
        optional(field('arguments', $.attribute_arguments)),
      ),

    // `description`, `stream.done`, `dynamic` (keyword reused as a name).
    attribute_name: ($) =>
      seq(
        choice($.identifier, alias('dynamic', $.identifier)),
        repeat(seq('.', $.identifier)),
      ),

    attribute_arguments: ($) => seq('(', commaSep($._expression), ')'),

    // ==========================================================================
    // Types
    // ==========================================================================

    _type: ($) =>
      choice(
        $.union_type,
        $.optional_type,
        $.array_type,
        $.type_path,
        $.function_type,
        $.parenthesized_type,
        $.literal_type,
      ),

    union_type: ($) =>
      prec.left(1, seq(field('left', $._type), '|', field('right', $._type))),

    // Postfix suffixes bind tighter than `|`: `int | string[]` is
    // `int | (string[])`. Optional `T?` and array `T[]` may stack.
    optional_type: ($) => prec(3, seq(field('type', $._type), '?')),

    array_type: ($) => prec(3, seq(field('type', $._type), '[', ']')),

    // `string`, `User`, `baml.iter.Iterator<Item = string, Error = never>`,
    // `map<string, int>`, `U.CompareError`
    type_path: ($) =>
      prec.right(
        seq(
          $.identifier,
          repeat(seq('.', $.identifier)),
          optional(field('type_arguments', $.type_arguments)),
        ),
      ),

    type_arguments: ($) =>
      seq('<', commaSep1(choice($._type, $.named_type_argument)), '>'),

    function_type: ($) =>
      prec.right(
        2,
        seq(
          field('parameters', $.function_type_parameters),
          '->',
          field('return_type', $._type),
          optional($.throws_clause),
        ),
      ),

    function_type_parameters: ($) =>
      seq('(', commaSep($.function_type_parameter), ')'),

    function_type_parameter: ($) =>
      choice(
        seq(field('name', $.identifier), ':', field('type', $._type)),
        field('type', $._type),
      ),

    _statement: ($) =>
      choice(
        $.let_declaration,
        $.expression_statement,
        $.while_statement,
        $.for_statement,
        $.defer_statement,
        $.test_declaration,
        $.testset_declaration,
        $.function_declaration,
        $.empty_statement,
      ),

    expression_statement: ($) => prec.right(seq($._expression, optional(';'))),

    // `let x = v;` `const y: int = x;` `watch let z = v;`
    // `const User { name } = user;` `let v: int = value else { return 0; };`
    let_declaration: ($) =>
      prec.right(
        prec.dynamic(
          1,
          seq(
          optional('watch'),
          choice('let', 'const'),
          field('pattern', $._pattern),
            optional(seq('=', field('value', $._expression))),
            optional(field('else', $.else_clause)),
            optional(';'),
          ),
        ),
      ),

    for_statement: ($) =>
      prec.right(
        seq(
          'for',
          choice(
            seq('(', $._for_header, ')'),
            $._for_in_header,
          ),
          field('body', $.block),
          optional(';'),
        ),
      ),

    _for_header: ($) => choice($._for_in_header, $._for_c_header),

    _for_in_header: ($) =>
      seq(
        choice('let', 'const'),
        field('pattern', $._pattern),
        'in',
        field('iterable', $._expression),
      ),

    member_expression: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field('object', $._expression),
          field('operator', choice('.', '?.')),
          field('property', alias($.identifier, $.property_identifier)),
        ),
      ),

    // `expr.as<Iface>` — explicit interface upcast (BEP-044).
    arguments: ($) => seq('(', commaSep(choice($._expression, $.named_argument)), ')'),

    // `f(limit = 2)`
